--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en" style="width:100%; height:100%;">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154983305-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-157600904-1');
+</script>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Vignesh's Resume</title>
 </head>
