--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   gtag('config', 'UA-157600904-1');
 </script>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Vignesh's Resume</title>
+  <title>Vignesh Viswanathan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src=" https://docs.google.com/gview?url=https://github.com/vigviswa/resume/blob/master/Vignesh_Resume.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
